建構會員中心:會員可檢視會員資訊及歷史訂購資訊

--- a/css/css.css
+++ b/css/css.css
@@ -37,7 +37,7 @@
 #left
 {
 	display:inline-block;
-	width:20%;
+	width:15%;
 	padding:2%;
 	min-height:550px;
 	vertical-align:top;
@@ -62,9 +62,9 @@
 #right
 {
 	display:inline-block;
-	width:71%;
+	width:75%;
 	padding:2%;
-	/* height:100vh; */
+	min-height:90vh;
 
 }
 #bottom
